# qoqo_qryd

./: .buildinfo  .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  book.toml  deny.toml  examples.html  execution.html  genindex.html  index.html  introduction.html  objects.inv  print.html  py-modindex.html  qoqo_qryd_api.html  qrydspecifics.html  search.html  searchindex.js  searchindex.json  toc.html  toc.js  webapi.html
.doctrees/: environment.pickle  index.doctree
.doctrees/src/: examples.doctree  execution.doctree  installation.doctree  introduction.doctree  qoqo_qryd_api.doctree  qrydspecifics.doctree  webapi.doctree
.github/workflows/: build_and_deploy.yml  build_ci_tests.yml  build_documentation.yml  ci_tests_main.yml  hqs-build-deploy-rust-pyo3-prerelease.yml  hqs-build-deploy-rust-pyo3-release.yml  hqs-build-deploy-rust-pyo3.yml  hqs-build-deploy-sphinx-doc-rust-pyo3.yml  hqs-ci-test-rust-pyo3.yml  hqs-test-workflow.yml  manual_deploy.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/src/: execution.rst.txt  installation.md.txt  qrydspecifics.rst.txt  webapi.rst.txt
documentation/: book.toml
documentation/src/: SUMMARY.md  examples.md  execution.md  index.md  introduction.md  qoqo_qryd_api.md  qrydspecifics.md  webapi.md
examples/: README.md  howto_webapi_qoqo.ipynb  multi_qubit_example.py  shift_qubits_example.py  switch_layout_example.py
qoqo-qryd/: Cargo.toml  README.md  build.rs  pyproject.toml
qoqo-qryd/docs/: conf.py  requirements.txt
qoqo-qryd/examples/: README.md  howto_webapi_qoqo.ipynb  multi_qubit_example.py  serialisation_example.py  shift_qubits_example.py  switch_layout_example.py  utils.py
qoqo-qryd/python_tests/: requirements.txt  test_web_api.py
qoqo-qryd/qoqo_qryd/: DEPENDENCIES  LICENSE_FOR_BINARY_DISTRIBUTION  OPENSSLLICENSE  __init__.py  api_devices.pyi  pragma_operations.pyi  qoqo_qryd.pyi  qryd_devices.pyi  tweezer_devices.pyi
qoqo-qryd/src/: api_backend.rs  api_devices.rs  emulator_devices.rs  experimental_devices.rs  lib.rs  pragma_operations.rs  qryd_devices.rs  simulator_backend.rs  tweezer_devices.rs
qoqo-qryd/tests/integration/: api_backend.rs  api_devices.rs  emulator_devices.rs  experimental_devices.rs  main.rs  operations.rs  qryd_devices.rs  simulator_backend.rs  tweezer_devices.rs
qoqo_qryd_api/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
qoqo_qryd_api/html/.doctrees/: environment.pickle  index.doctree  modules.doctree
qoqo_qryd_api/html/_modules/: index.html
qoqo_qryd_api/html/_sources/: index.rst.txt  modules.rst.txt
qoqo_qryd_api/html/_static/: documentation_options.js
roqoqo-qryd/: Cargo.toml  README.md  build.rs
roqoqo-qryd/src/: api_backend.rs  api_devices.rs  emulator_devices.rs  experimental_devices.rs  lib.rs  pragma_operations.rs  qryd_devices.rs  simulator_backend.rs  tweezer_devices.rs
roqoqo-qryd/tests/integration/: api_backend.rs  api_devices.rs  emulator_devices.rs  experimental_devices.rs  main.rs  pragma_operations.rs  qryd_devices.rs  simulator_backend.rs  tweezer_devices.rs
src/: examples.html  execution.html  installation.html  introduction.html  qoqo_qryd_api.html  qrydspecifics.html  webapi.html
userdoc/: Makefile  conf.py  index.rst  requirements.txt
userdoc/src/: examples.rst  execution.rst  installation.md  introduction.rst  qoqo_qryd_api.rst  qrydspecifics.rst  webapi.rst
