[workspace]
members = [
    "qoqo-qryd",
    "roqoqo-qryd",
]

[profile.release]
lto = "thin"

[profile.bench]
lto = "thin"

[patch.crates-io]

# roqoqo = {git="https://github.com/HQSquantumsimulations/qoqo.git", branch="main"}
# roqoqo-derive = {git="https://github.com/HQSquantumsimulations/qoqo.git", branch="main"}
# qoqo = {git="https://github.com/HQSquantumsimulations/qoqo.git", branch="main"}
# roqoqo-test = {git="https://github.com/HQSquantumsimulations/qoqo.git", branch="main"}
# roqoqo-quest = {git="https://github.com/HQSquantumsimulations/qoqo-quest.git", branch="dev0.8.0"}

# roqoqo = {git="https://github.com/nfwvogt/qoqo.git", branch="pyo3017"}
# roqoqo-derive = {git="https://github.com/nfwvogt/qoqo.git", branch="pyo3017"}
# qoqo = {git="https://github.com/nfwvogt/qoqo.git", branch="pyo3017"}
# roqoqo-test = {git="https://github.com/nfwvogt/qoqo.git", branch="pyo3017"}
# roqoqo-quest ={version="0.8.0-beta.1", path="../qoqo-quest/roqoqo-quest"}