[package]
name = "qoqo-qryd"
version = "0.7.0-alpha.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.56"
categories = ["science", "simulation"]
readme = "README.md"
homepage = "https://github.com/HQSquantumsimulations/qoqo_qryd"
documentation = "https://hqsquantumsimulations.github.io/qoqo_qryd/"
repository = "https://github.com/HQSquantumsimulations/qoqo_qryd/"
description = "QRyd backend for qoqo quantum computing toolkit"
include = ["src/*", "qoqo_qryd/*", "README.md", "pyproject.toml", "Cargo.toml", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo_qryd"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.17"
features = ["num-complex"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
qoqo_calculator = {version="1.1"}
numpy = "0.17"

qoqo_calculator_pyo3 = {version="1.1", default-features=false}

qoqo = {package="qoqo", version="1.2.0-alpha.1", default-features=false}

roqoqo = {package="roqoqo", version="1.2.0-alpha.1", features = ["serialize"]}

ndarray = "0.15"
roqoqo-qryd = {version="0.7.0-alpha.1", path="../roqoqo-qryd", default-features=false, features = ["serialize"]}
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
test-case = "2.0"

[build-dependencies]
pyo3-build-config = "0.17"

[features]
extension-module = ["pyo3/extension-module", "simulator", "web-api"]
default = ["extension-module"]
simulator = ["roqoqo-qryd/simulator"]
web-api = ["roqoqo-qryd/web-api"]
