[package]
name = "qoqo-qryd"
version = "0.11.8-alpha.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.56"
categories = ["science", "simulation"]
readme = "README.md"
homepage = "https://github.com/HQSquantumsimulations/qoqo_qryd"
documentation = "https://hqsquantumsimulations.github.io/qoqo_qryd/"
repository = "https://github.com/HQSquantumsimulations/qoqo_qryd/"
description = "QRyd backend for qoqo quantum computing toolkit"
include = [
    "src/*",
    "qoqo_qryd/*",
    "README.md",
    "pyproject.toml",
    "Cargo.toml",
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo_qryd"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.19"
features = ["num-complex"]

[dependencies]
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
numpy = "0.19"

qoqo_calculator = { version = "1.1" }
qoqo_calculator_pyo3 = { version = "1.1", default-features = false }
qoqo = { version="1.8.0-alpha.2", default-features = false }
roqoqo = { version="1.8.0-alpha.2", features = ["serialize"] }

roqoqo-qryd = { version = "0.11.8-alpha.0", path = "../roqoqo-qryd", default-features = false, features = [
    "web-api",
] }


[dev-dependencies]
test-case = "3.0"
mockito = { version = "1.1", default-features = false }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.19"

[features]
extension-module = ["pyo3/extension-module", "simulator", "web-api"]
default = ["extension-module"]
simulator = ["roqoqo-qryd/simulator"]
web-api = ["roqoqo-qryd/web-api"]
