[project]
name = "qoqo_qryd"
version = "0.11.1"
dependencies = [
  'numpy',
  'qoqo>=1.6',
  'qoqo_calculator_pyo3>=1.1',
]
license = {text="Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016 AND BSD-2-Clause AND BSD-3-CLause"}
maintainers = [{name = "HQS Quantum Simulations GmbH", email = "info@quantumsimulations.de"}]
requires-python = ">=3.7"

[project.optional-dependencies]
docs = [
  "tomli",
  "sphinx>=2.1",
  "nbsphinx",
  "pygments",
  "recommonmark",
  "myst_parser",
  "sphinx_rtd_theme",
]

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux_2_28"
skip-auditwheel = false
strip = true
profile = "release"