[project]
name = "qoqo_qryd"
version = "0.21.0"
dependencies = ['numpy', 'qoqo>=1.16,<1.17', 'qoqo_calculator_pyo3>=1.2,<1.3']
license = { text = "Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016 AND BSD-2-Clause AND BSD-3-CLause" }
maintainers = [
  { name = "HQS Quantum Simulations GmbH", email = "info@quantumsimulations.de" },
]
requires-python = ">=3.8"

[project.optional-dependencies]
docs = [
  "tomli",
  "sphinx>=2.1",
  "nbsphinx",
  "pygments",
  "recommonmark",
  "myst_parser",
  "sphinx_rtd_theme",
]
qollage = ['pillow>=10.3.0', 'ipython>=8.12']

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux_2_28"
skip-auditwheel = false
strip = true
profile = "release"
