[package]
name = "roqoqo-qryd"
version = "0.5.4"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.56"
categories = ["science", "simulation"]
readme = "../README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_qryd"
documentation = "https://docs.rs/roqoqo-qryd/"
homepage = "https://github.com/HQSquantumsimulations/qoqo_qryd"
description = "QRyd interface for roqoqo rust quantum computing toolkit"
include = ["src/*", "Cargo.toml", "README.md", "LICENSE"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "roqoqo_qryd"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = {version="1.0.0-alpha.5", features=["serialize"]}
roqoqo-derive = {version="1.0.0-alpha.5"}
roqoqo-quest = {version = "0.7", default-features=false, optional=true}
qoqo_calculator = { version="0.8"}
serde = {version="1.0", features=["derive"], optional=true}
serde_json = "1.0"
ndarray= {version="0.15"}
bincode = "1.3"
reqwest = {version="0.11", features = ["json", "blocking", "native-tls-vendored"]}
num-complex = "0.4"
bitvec = "1.0"
hex = "0.4"

[dev-dependencies]
test-case = "2.0.2"
serde_test = {version="1.0"}
roqoqo-test = {version="1.0.0-alpha.5"}

[features]
default = ["serialize", "simulator"]
serialize = ["serde"]
simulator = ["roqoqo-quest"]
