[package]
name = "roqoqo-qryd"
version = "0.6.0-beta.2"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.56"
categories = ["science", "simulation"]
readme = "../README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_qryd"
documentation = "https://docs.rs/roqoqo-qryd/"
homepage = "https://github.com/HQSquantumsimulations/qoqo_qryd"
description = "QRyd interface for roqoqo rust quantum computing toolkit"
include = ["src/*", "Cargo.toml", "README.md", "LICENSE"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "roqoqo_qryd"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = {version="1.1.0-beta.1", features=["serialize"]}
roqoqo-derive = {version="1.1.0-beta.1"}
roqoqo-quest = {version = "0.8.0-beta.1", default-features=false, optional=true}
qoqo_calculator = { version="1.1"}
serde = {version="1.0", features=["derive"], optional=true}
serde_json = "1.0"
ndarray= {version="0.15"}
bincode = "1.3"
reqwest = {version="0.11", features = ["json", "blocking", "native-tls-vendored"], optional=true}
num-complex = "0.4"
bitvec = {version="1.0", optional=true}
hex = {version="0.4", optional=true}
itertools = "0.10.3"

[dev-dependencies]
test-case = "2.0.2"
serde_test = {version="1.0"}
roqoqo-test = {version="1.1.0-beta.1"}

[features]
default = ["serialize", "simulator", "web-api"]
serialize = ["serde"]
web-api = ["reqwest", "hex", "bitvec"]
simulator = ["roqoqo-quest"]
